--- a/front-end-mentor-css-tailwind/index.html
+++ b/front-end-mentor-css-tailwind/index.html
@@ -13,26 +13,30 @@
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
 
+  <!-- Cargar Tailwind CSS-->
+  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
+
   <title>Frontend Mentor | Social links profile</title>
 
 </head>
 
-<body>
+<body class="bg-gray-950 h-screen flex items-center justify-center">
 
-  <div>
-    <div>
-      <img src="assets/images/avatar-jessica.jpeg" alt="profile">
-      <h1>Jessica Randall</h1>
-      <p>London, United Kingdom</p>
-      <div>"Front-end developer and avid reader."</div>
+  <div class="bg-gray-900 text-white flex flex-col p-4 rounded-lg">
+    <div class="flex flex-col items-center text-center">
+      <img class="size-20 rounded-3xl" src="assets/images/avatar-jessica.jpeg" alt="profile">
+      <h1 class="text-3xl sm:text-red-700 ">Jessica Randall</h1>
+      <p class="text-lime-300">London, United Kingdom</p>
+      <div class="text-gray-300 my-2">"Front-end developer and avid reader."</div>
 
     </div>
-    <div>
-      <div>GitHub</div>
-      <div>Frontend Mentor</div>
-      <div>LinkedIn</div>
-      <div>Twitter</div>
-      <div>Instagram</div>
+    <div class="text-center space-y-3">
+      <div class="bg-gray-800 py-2 rounded-sm">GitHub</div>
+      <div class="bg-gray-800 py-2 rounded-sm">Frontend Mentor</div>
+      <div class="bg-gray-800 py-2 rounded-sm">LinkedIn</div>
+      <div class="bg-gray-800 py-2 rounded-sm">Twitter</div>
+      <div class="bg-gray-800 py-2 rounded-sm">Instagram</div>
     </div>
   </div>
 </body>
