--- a/front-end-mentor-css-tailwind/index.html
+++ b/front-end-mentor-css-tailwind/index.html
@@ -15,17 +15,21 @@
 
   <!-- Cargar Tailwind CSS-->
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+ 
 
     <style type="text/tailwindcss">
       @theme {
         /* Color personalizado */
         --color-primary-green: hsl(75, 94%, 57%);
+
+        /* font style personalizado...os lo dejo como ejercicio */
       }
     </style>  <title>Frontend Mentor | Social links profile</title>
   
 </head>
 
-<body class="bg-primary-green h-screen flex items-center justify-center">
+<body class="bg-primary-green h-screen flex items-center justify-center font-[Inter]">
+  <!-- font-[Inter] utiliza el tipo de letra Inter, que hemnos cargado previamente de Google -->
 
   <div class="bg-gray-900 text-white flex flex-col  rounded-lg p-8">
     <div class="flex flex-col items-center text-center">
@@ -35,7 +39,7 @@
       <div class="text-gray-300 my-2">"Front-end developer and avid reader."</div>
 
     </div>
-    <div class="text-center space-y-3">
+    <div class="text-center space-y-3 ">
       <div class="bg-gray-800 py-2 rounded-sm">GitHub</div>
       <div class="bg-gray-800 py-2 rounded-sm">Frontend Mentor</div>
       <div class="bg-gray-800 py-2 rounded-sm">LinkedIn</div>
