--- a/bootstrap-ejemplos-curso-estefania/2 - grid-varias-filas-ejemplo.html
+++ b/bootstrap-ejemplos-curso-estefania/2 - grid-varias-filas-ejemplo.html
@@ -24,7 +24,9 @@
   </head>
   <body>
     <div class="container text-center">
+      <!-- mientras tenga espacio, quiero ver esto en fila-->
       <div class="row">
+        <!-- cuando no tenga espacio un DIV se va a apilar encima de otro -->
         <div class="col">
           Columna 1
         </div>
