--- a/bootstrap-ejemplos-curso-estefania/3 - grid-breakpoints-especificos.html
+++ b/bootstrap-ejemplos-curso-estefania/3 - grid-breakpoints-especificos.html
@@ -26,10 +26,10 @@
     <div class="container text-center">
       <!-- Columnas con distintos breakpoints. -->
       <div class="row">
-        <div class="col-sm-4 col-lg-6 columna">
+        <div class="col-sm-4 columna">
           .col-sm-5 .col-lg-6
         </div>
-        <div class="col-sm-8 col-lg-6 columna">
+        <div class="col-sm-8 columna">
           .col-sm-7 .col-lg-6
         </div>
       </div>
